# conway_s_game_of_life

./: .gitignore  README.md  build.sh  build_worker.sh  game_of_life.js  game_of_life_worker.js  index.html  index.js
wasm_modules/game_of_life/: Cargo.toml
wasm_modules/game_of_life/.cargo/: config.toml
wasm_modules/game_of_life/shader/: cell.wgsl  simulate.wgsl
wasm_modules/game_of_life/src/: lib.rs
wasm_modules_initialization/: game_of_life_init.js  game_of_life_worker_init.js
workers/: game_of_life_worker.js
