[package]
name = "game_of_life"
version = "0.1.0"
authors = ["roman shushakov <roman.a.shushakov1@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
opt-level = 3

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.92"
web-sys = {version = "0.3.69", features = [
    "GpuDevice",
    "GpuTextureFormat",
    "GpuCanvasContext",
    "GpuShaderModuleDescriptor",
    "GpuShaderModule",
    "GpuProgrammableStage",
    "gpu_shader_stage",
    "GpuBindGroupLayoutEntry",
    "GpuBufferBindingLayout",
    "GpuBufferBindingType",
    "GpuBindGroupLayoutDescriptor",
    "GpuBindGroupLayout",
    "GpuPipelineLayoutDescriptor",
    "GpuPipelineLayout",
    "GpuComputePipelineDescriptor",
    "GpuComputePipeline",
    "GpuBindGroup",
    "GpuBindGroupDescriptor",
    "GpuBindGroupEntry",
    "GpuBufferBinding",
    "GpuBuffer",
    "GpuBufferDescriptor",
    "gpu_buffer_usage",
    "GpuQueue",
    "GpuVertexState",
    "GpuVertexBufferLayout",
    "GpuVertexAttribute",
    "GpuVertexFormat",
    "GpuRenderPipelineDescriptor",
    "GpuRenderPipeline",
    "GpuFragmentState",
    "GpuColorTargetState",
    "GpuCommandEncoder",
    "GpuComputePassEncoder",
    "GpuRenderPassEncoder",
    "GpuRenderPassDescriptor",
    "GpuRenderPassColorAttachment",
    "GpuLoadOp",
    "GpuStoreOp",
    "GpuTexture",
    "GpuTextureView",
    "GpuPrimitiveTopology",
    "GpuPrimitiveState",
    "GpuCommandBuffer",
    "GpuColorDict",
]}

js-sys = "0.3.69"
rand = "0.8.5"
getrandom = { version = "0.2.15", features = ["js"] }
